Fix: Hide stats controls on leaderboards route, improve dark mode table styling

--- a/src/app/leaderboards/leaderboards.component.scss
+++ b/src/app/leaderboards/leaderboards.component.scss
@@ -1,5 +1,6 @@
 .leaderboards {
   &__title {
     margin-bottom: 0;
+    text-align: center;
   }
 }
